--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,9 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-prompt: var(--font-prompt);
+  --font-pridi: var(--font-pridi);
+  --font-itim: var(--font-itim);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +26,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  text-size-adjust: 100%;
 }
